--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
+altair==6.0.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
@@ -9,6 +10,8 @@ async-timeout==4.0.3
 attrs==25.4.0
 backoff==2.2.1
 black==25.11.0
+blinker==1.9.0
+cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
@@ -27,6 +30,8 @@ fastapi==0.121.3
 filelock==3.20.0
 frozenlist==1.8.0
 fsspec==2024.12.0
+gitdb==4.0.12
+GitPython==3.1.45
 greenlet==3.2.4
 grpcio==1.76.0
 h11==0.16.0
@@ -47,6 +52,8 @@ joblib==1.5.2
 json_repair==0.44.1
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
 jupyter_core==5.9.1
 langchain==1.1.0
@@ -73,16 +80,18 @@ mem0ai==1.0.1
 mpmath==1.3.0
 multidict==6.7.0
 mypy_extensions==1.1.0
+narwhals==2.13.0
 neo4j==5.28.2
 neo4j-graphrag==1.10.1
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.2.6
 ollama==0.6.1
-openai==2.8.1
+openai==2.9.0
 orjson==3.11.4
 ormsgpack==1.12.0
 packaging==25.0
+pandas==2.3.3
 parso==0.8.5
 pathspec==0.12.1
 pillow==12.0.0
@@ -94,10 +103,12 @@ propcache==0.4.1
 protobuf==5.29.5
 psutil==7.1.3
 pure_eval==0.2.3
+pyarrow==22.0.0
 PyAudio==0.2.14
 pydantic==2.12.4
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+pydeck==0.9.1
 Pygments==2.19.2
 pymongo==4.15.5
 pypdf==6.4.0
@@ -111,25 +122,30 @@ pyzmq==27.1.0
 qdrant-client==1.16.0
 rank-bm25==0.2.2
 redis==7.1.0
+referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
+rpds-py==0.30.0
 rq==2.6.1
 safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.15.3
 sentence-transformers==5.1.2
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 SpeechRecognition==3.14.4
 SQLAlchemy==2.0.44
 stack-data==0.6.3
 starlette==0.50.0
+streamlit==1.52.1
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.12.0
 tokenizers==0.22.1
+toml==0.10.2
 tomli==2.3.0
 torch==2.9.1
 tornado==6.5.2
@@ -140,9 +156,11 @@ types-PyYAML==6.0.12.20250915
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 uv==0.9.11
 uvicorn==0.38.0
+watchdog==6.0.0
 wcwidth==0.2.14
 xxhash==3.6.0
 yarl==1.22.0
