--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,16 @@ streamlit==1.32.0
 openai==1.13.3
 python-dotenv==1.0.1
 
-# LangChain stack (pydantic v2 compatible)
+# LangChain stack
 langchain==0.1.16
 langchain-core==0.1.52
 langchain-community==0.0.33
 langchain-qdrant==0.1.3
 
-# REQUIRED by langchain-qdrant
+# Required versions
 pydantic==2.7.4
+qdrant-client==1.10.1
 
-qdrant-client==1.7.2
 huggingface-hub==0.22.2
 sentence-transformers==2.6.0
 requests==2.31.0
