--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,8 @@ langchain-core==0.1.52
 langchain-community==0.0.33
 langchain-qdrant==0.1.3
 
-qdrant-client==1.10.1
-
 pydantic==2.7.4
 sentence-transformers==2.6.0
 huggingface-hub==0.22.2
 requests==2.31.0
+numpy==1.26.4
