--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aiosignal==1.4.0
 altair==6.0.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
-anyio==4.11.0
+anyio==4.12.0
 asttokens==3.0.1
 async-timeout==4.0.3
 attrs==25.4.0
@@ -32,12 +32,21 @@ frozenlist==1.8.0
 fsspec==2024.12.0
 gitdb==4.0.12
 GitPython==3.1.45
+google-ai-generativelanguage==0.6.15
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
+google-generativeai==0.8.5
+googleapis-common-protos==1.72.0
 greenlet==3.2.4
 grpcio==1.76.0
+grpcio-status==1.71.2
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
 httpx-sse==0.4.3
 huggingface-hub==0.36.0
@@ -56,13 +65,15 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
 jupyter_core==5.9.1
+kagglehub==0.3.13
 langchain==1.1.0
 langchain-classic==1.0.0
 langchain-community==0.4.1
-langchain-core==1.1.0
+langchain-core==1.2.0
 langchain-huggingface==1.0.1
 langchain-mongodb==0.8.0
 langchain-neo4j==0.6.0
+langchain-ollama==1.0.1
 langchain-openai==1.1.0
 langchain-qdrant==1.1.0
 langchain-text-splitters==1.0.0
@@ -71,7 +82,7 @@ langgraph-checkpoint==3.0.1
 langgraph-checkpoint-mongodb==0.3.0
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.9
-langsmith==0.4.46
+langsmith==0.4.59
 lark==1.3.1
 MarkupSafe==3.0.3
 marshmallow==3.26.1
@@ -88,7 +99,7 @@ networkx==3.4.2
 numpy==2.2.6
 ollama==0.6.1
 openai==2.9.0
-orjson==3.11.4
+orjson==3.11.5
 ormsgpack==1.12.0
 packaging==25.0
 pandas==2.3.3
@@ -100,17 +111,21 @@ portalocker==3.2.0
 posthog==7.0.1
 prompt_toolkit==3.0.52
 propcache==0.4.1
+proto-plus==1.26.1
 protobuf==5.29.5
 psutil==7.1.3
 pure_eval==0.2.3
 pyarrow==22.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 PyAudio==0.2.14
-pydantic==2.12.4
+pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 pydeck==0.9.1
 Pygments==2.19.2
 pymongo==4.15.5
+pyparsing==3.2.5
 pypdf==6.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -128,6 +143,7 @@ requests==2.32.5
 requests-toolbelt==1.0.0
 rpds-py==0.30.0
 rq==2.6.1
+rsa==4.9.1
 safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.15.3
@@ -157,7 +173,9 @@ typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
-urllib3==2.5.0
+uritemplate==4.2.0
+urllib3==2.6.2
+uuid_utils==0.12.0
 uv==0.9.11
 uvicorn==0.38.0
 watchdog==6.0.0
