--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ anyio==4.12.0
 asttokens==3.0.1
 async-timeout==4.0.3
 attrs==25.4.0
+av==16.0.1
 backoff==2.2.1
 black==25.11.0
 blinker==1.9.0
@@ -16,8 +17,10 @@ certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
+coloredlogs==15.0.1
 comm==0.2.3
 croniter==6.0.0
+ctranslate2==4.6.2
 dataclasses-json==0.6.7
 debugpy==1.8.17
 decorator==5.2.1
@@ -27,9 +30,13 @@ dotenv==0.9.9
 exceptiongroup==1.3.1
 executing==2.2.1
 fastapi==0.121.3
+faster-whisper==1.2.1
+ffmpeg-python==0.2.0
 filelock==3.20.0
+flatbuffers==25.9.23
 frozenlist==1.8.0
 fsspec==2024.12.0
+future==1.0.0
 gitdb==4.0.12
 GitPython==3.1.45
 google-ai-generativelanguage==0.6.15
@@ -44,14 +51,18 @@ grpcio==1.76.0
 grpcio-status==1.71.2
 h11==0.16.0
 h2==4.3.0
+hf-xet==1.2.0
 hpack==4.1.0
 httpcore==1.0.9
 httplib2==0.31.0
 httpx==0.28.1
 httpx-sse==0.4.3
 huggingface-hub==0.36.0
+humanfriendly==10.0
 hyperframe==6.1.0
 idna==3.11
+ImageIO==2.37.2
+imageio-ffmpeg==0.6.0
 ipykernel==7.1.0
 ipython==8.37.0
 jedi==0.19.2
@@ -84,10 +95,13 @@ langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.9
 langsmith==0.4.59
 lark==1.3.1
+llvmlite==0.46.0
 MarkupSafe==3.0.3
 marshmallow==3.26.1
 matplotlib-inline==0.2.1
 mem0ai==1.0.1
+more-itertools==10.8.0
+moviepy==2.2.1
 mpmath==1.3.0
 multidict==6.7.0
 mypy_extensions==1.1.0
@@ -96,19 +110,24 @@ neo4j==5.28.2
 neo4j-graphrag==1.10.1
 nest-asyncio==1.6.0
 networkx==3.4.2
+nodejs-wheel-binaries==24.12.0
+numba==0.63.1
 numpy==2.2.6
 ollama==0.6.1
+onnxruntime==1.23.2
 openai==2.9.0
+openai-whisper==20250625
 orjson==3.11.5
 ormsgpack==1.12.0
 packaging==25.0
 pandas==2.3.3
 parso==0.8.5
 pathspec==0.12.1
-pillow==12.0.0
+pillow==11.3.0
 platformdirs==4.5.0
 portalocker==3.2.0
 posthog==7.0.1
+proglog==0.1.12
 prompt_toolkit==3.0.52
 propcache==0.4.1
 proto-plus==1.26.1
@@ -127,9 +146,12 @@ Pygments==2.19.2
 pymongo==4.15.5
 pyparsing==3.2.5
 pypdf==6.4.0
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytokens==0.3.0
+pytube==15.0.0
+pytubefix==10.3.6
 pytz==2025.2
 pywin32==311
 PyYAML==6.0.3
